# robotframework-PlatynUI

./: .csharpierignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING_GUIDELINES.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  ISSUE_TEMPLATES.md  PULL_REQUEST_TEMPLATE.md  PlatynUI.sln  README.md  REUSE.toml  SECURITY_POLICY.md  cliff.toml  pyproject.toml  robot.toml
.config/: dotnet-tools.json
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build-wheels.yml  test-package.yml
docs/: REPOSITORY_ADMINS_ACCEPT_CONTENT_REPORTS.md
playground/: Untitled-1.robotbook  cattrstest.py  dd.py  ducktyping.py  first.py  hh.py  jsonpeer copy.py  jsonpeer.py  jsonrpctest copy.py  jsonrpctest.py  robotcodejsonrpctest.py  simple.py  stdiostream.py  ttatspi.py
scripts/: dotnet_build_hook.py  get_runtime_identifier.csx  rm.py  tools.py  update_changelog.py  update_git_versions.py
src/: Directory.Build.props  Directory.Build.targets
src/PlatynUI/: ButtonKeywords.py  TextKeywords.py  __about__.py  __init__.py
src/PlatynUI.Extension.Linux.AtSpi2/: NodeProvider.cs  PlatynUI.Extension.Linux.AtSpi2.csproj
src/PlatynUI.Extension.Linux.AtSpi2/xml/: Bus.xml
src/PlatynUI.Extension.Provider.Client/: Node.cs  NodeProvider.cs  PlatynUI.Extension.Provider.Client.csproj  ProcessProvider.cs  ThreadHelper.cs
src/PlatynUI.Extension.Win32.UiAutomation/: Adapter.cs  ApplicationNode.cs  ElementNode.cs  Finder.cs  Helper.cs  NodeProvider.cs  Patterns.cs  PlatynUI.Extension.Win32.UiAutomation.csproj  WindowElementNode.cs
src/PlatynUI.Extension.Win32.UiAutomation/Client/: AutomationElementMode.cs  CUIAutomation.cs  CUIAutomation8.cs  CUIAutomation8Class.cs  CUIAutomationClass.cs  CoalesceEventsOptions.cs  ConnectionRecoveryBehaviorOptions.cs  DockPosition.cs  ExpandCollapseState.cs  ExtendedProperty.cs  IAccessible.cs  IRawElementProviderSimple.cs  IUIAutomation.cs  IUIAutomation2.cs  IUIAutomation3.cs  IUIAutomation4.cs  IUIAutomation5.cs  IUIAutomation6.cs  IUIAutomationActiveTextPositionChangedEventHandler.cs  IUIAutomationAndCondition.cs  IUIAutomationAnnotationPattern.cs  IUIAutomationBoolCondition.cs  IUIAutomationCacheRequest.cs  IUIAutomationChangesEventHandler.cs  IUIAutomationCondition.cs  IUIAutomationCustomNavigationPattern.cs  IUIAutomationDockPattern.cs  IUIAutomationDragPattern.cs  IUIAutomationDropTargetPattern.cs  IUIAutomationElement.cs  IUIAutomationElement2.cs  IUIAutomationElement3.cs  IUIAutomationElement4.cs  IUIAutomationElement5.cs  IUIAutomationElement6.cs  IUIAutomationElement7.cs  IUIAutomationElement8.cs  IUIAutomationElement9.cs  IUIAutomationElementArray.cs  IUIAutomationEventHandler.cs  (+82 more)
src/PlatynUI.Extension.Win32.UiAutomation/Core/: Automation.cs  AutomationElementNode.cs  ElementNavigatorBase.cs  Node.cs  UiAutomationElementExtensions.cs  XPathNavigator.cs  XsltContext.cs
src/PlatynUI.JsonRpc/: Attributes.cs  JsonRpcPeer.cs  MessageFramer.cs  PlatynUI.JsonRpc.csproj
src/PlatynUI.JsonRpc.Endpoints/: Devices.cs  PlatynUI.JsonRpc.Endpoints.csproj
src/PlatynUI.JsonRpc.Generators/: JsonRpcEndpointClientGenerator.cs  JsonRpcEndpointGenerator.cs  JsonRpcEndpointServerGenerator.cs  PlatynUI.JsonRpc.Generators.csproj
src/PlatynUI.Platform.MacOS/: AssemblyInfo.cs  DisplayDevice.cs  Interop.cs  MouseDevice.cs  PlatynUI.Platform.MacOS.csproj
src/PlatynUI.Platform.MacOS/SwiftInterop/: .gitignore  Package.swift  send_json.sh
src/PlatynUI.Platform.Win32/: AssemblyInfo.cs  DisplayDevice.cs  Highlighter.cs  KeyboardDevice.cs  Line.cs  MouseDevice.cs  NativeMethods.txt  PlatynUI.Platform.Win32.csproj
src/PlatynUI.Platform.X11/: AssemblyInfo.cs  DisplayDevice.cs  GlobalSuppressions.cs  Highlighter.cs  KeyboardDevice.cs  Line.cs  MotifHints.cs  MouseDevice.cs  PlatynUI.Platform.X11.csproj  XCBConnection.cs  generateInterop.sh
src/PlatynUI.Platform.X11/Interop/: Attributes.cs  XCB.cs
src/PlatynUI.Provider.Avalonia/: AppBuilderExtension.cs  ApplicationInfo.cs  ApplicationNode.cs  ElementNode.cs  Node.cs  NodeInfo.cs  PlatynUI.Provider.Avalonia.csproj  Server.cs
src/PlatynUI.Provider.Client/: Node.cs  NodeProvider.cs  PlatynUI.Provider.Client.csproj  ProcessProvider.cs  ThreadHelper.cs
src/PlatynUI.Provider.Core/: PipeHelper.cs  PlatynUI.Provider.Core.csproj  Types.cs  UserInfo.cs
src/PlatynUI.Provider.Server/: PlatynUI.Provider.Server.csproj  ProviderServerBase.cs
src/PlatynUI.Runtime/: Desktop.cs  Display.cs  DisplayDevice.cs  Finder.cs  Keyboard.cs  KeyboardDevice.cs  Mouse.cs  MouseDevice.cs  PlatynUI.Runtime.csproj  PlatynUiExtensions.cs  Types.cs
src/PlatynUI.Runtime/Core/: Adapter.cs  Devices.cs  DisplayDevice.cs  Element.cs  Namespaces.cs  Node.cs  XPathNavigator.cs  XsltContext.cs
src/PlatynUI.Server/: PlatynUI.Server.csproj  Program.cs  send_json.sh
src/PlatynUI.Server/Endpoints/: DisplayDevice.cs  MouseDevice.cs
src/PlatynUI.Server/Services/: DisplayDevice.cs
src/PlatynUI.Spy/: App.axaml  App.axaml.cs  PlatynUI.Spy.csproj  Program.cs  ViewLocator.cs  app.manifest
src/PlatynUI.Spy/Converters/: ValueToString.cs
src/PlatynUI.Technology.UiAutomation/: Adapter.cs  ApplicationNode.cs  Display.cs  ElementNode.cs  Finder.cs  GlobalSuppressions.cs  Keyboard.cs  Mouse.cs  NativeMethods.txt  NodeProvider.cs  Patterns.cs  PlatynUI.Technology.UiAutomation.csproj  Types.cs  UiAutomationNode.cs
src/PlatynUI.Technology.UiAutomation.Spy/: App.xaml  App.xaml.cs  Bootstrapper.cs  DebugLogger.cs  PlatynUI.Technology.UiAutomation.Spy.csproj  ShellView.xaml  ShellView.xaml.cs  ShellViewModel.cs  app.manifest
src/PlatynUI/core/: __init__.py  (+16 more)
src/Playground/: DebugStream.cs  DemoApi.cs  Playground.cs  Playground.csproj  Program.cs  Program.cs_  Program.cs__  send_json.sh
tests/: test_adapter.py
tests/python/: __init__.py  test_adapter.py  test_dotnet_loader.py  test_types.py
tests/robot/: blah.robot  demo.robot  dummy.robot  first.robot  mapping.py  matrix.robot  mouse.robot  properties.robot  x11_keyboard.robot
typings/System/: __init__.pyi
(+806 files in other folders)
